NIFI-16031 Replaced org.springframework.data.redis.connection.RedisStringCommands deprecated set method with suggested set method (#11360)