@@ -31,7 +31,7 @@ import org.apache.nifi.redis.RedisConnectionPool;
 import org.apache.nifi.redis.util.RedisAction;
 import org.apache.nifi.util.Tuple;
 import org.springframework.data.redis.connection.RedisConnection;
-import org.springframework.data.redis.connection.RedisStringCommands;
+import org.springframework.data.redis.connection.SetCondition;
 import org.springframework.data.redis.core.types.Expiration;
 
 import java.io.ByteArrayOutputStream;
@@ -120,16 +120,15 @@ public class SimpleRedisDistributedMapCacheClientService extends AbstractControl
 
                 // if the results list was empty, then the transaction failed (i.e. key was modified after we started watching), so keep looping to retry
                 // if the results list was null, then the transaction failed
-                // if the results list has results, then the transaction succeeded and it should have the result of the setNX operation
+                // if the results list has results, then the transaction succeeded, and it should have the result of the setNX operation
                 if (results != null && !results.isEmpty()) {
-                    final Object firstResult = results.get(0);
-                    if (firstResult instanceof Boolean) {
-                        final Boolean absent = (Boolean) firstResult;
+                    final Object firstResult = results.getFirst();
+                    if (firstResult instanceof Boolean absent) {
                         return absent ? null : valueDeserializer.deserialize(existingValue);
                     } else {
                         // this shouldn't really happen, but just in case there is a non-boolean result then bounce out of the loop
                         throw new IOException("Unexpected result from Redis transaction: Expected Boolean result, but got "
-                                + firstResult.getClass().getName() + " with value " + firstResult.toString());
+                                + firstResult.getClass().getName() + " with value " + firstResult);
                     }
                 }
             } while (isEnabled());
@@ -150,7 +149,7 @@ public class SimpleRedisDistributedMapCacheClientService extends AbstractControl
     public <K, V> void put(final K key, final V value, final Serializer<K> keySerializer, final Serializer<V> valueSerializer) throws IOException {
         withConnection(redisConnection -> {
             final Tuple<byte[], byte[]> kv = serialize(key, value, keySerializer, valueSerializer);
-            redisConnection.stringCommands().set(kv.getKey(), kv.getValue(), Expiration.seconds(ttl), RedisStringCommands.SetOption.upsert());
+            redisConnection.stringCommands().set(kv.getKey(), kv.getValue(), SetCondition.upsert(), Expiration.seconds(ttl));
             return null;
         });
     }
